--- a/.web/src/style.css
+++ b/.web/src/style.css
@@ -1,26 +1,59 @@
-.loginCss{
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(45deg, rgb(10,96,102)rgb(0,127,130));
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    padding: 80px;
-    border-radius: 20px;
-    color: black;
-  }
-  
-  .inputlogin{
-    padding: 15px; 
-    border:10px;
-    border-radius: 15px;
-    outline: none;
-    font-size: 15px;
-  }
+body {
+  margin: 0;
+  padding: 0;
+}
 
-  .botaoEnviar{
-    border: 10px;
-    width: 100%;
-    border-radius: 10px;
-    padding: 15px;
-  }
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../media/unicamp-fca.png');
+  background-size:contain;
+  filter: brightness(50%);
+}
+
+.login-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.7);
+  width: 400px;
+  height: 400px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(70%);
+  padding: 20px;
+}
+
+.logo {
+  width: 50%;
+  margin-bottom: 20px;
+}
+
+.ui.input {
+  width: 100%;
+  padding: 10px;
+}
+
+.ui.primary.button{
+  width: 50%;
+}
+
+.forgot-password {
+  margin-top: 15px;
+}
+
+.forgot-password a {
+  color: #464646;
+  text-decoration: none;
+}
+
+.forgot-password a:hover {
+  text-decoration: underline;
+}
