--- a/.web/src/style.css
+++ b/.web/src/style.css
@@ -1,321 +1,443 @@
 body {
   margin: 0;
   padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.background {
+@font-face {
+  font-family: SFProBold;
+  src: url(../fonts/SFPRODISPLAYBOLD.OTF)
+}
+
+@font-face {
+  font-family: SFProRegular;
+  src: url(../fonts/SFPRODISPLAYREGULAR.OTF);
+}
+
+.bg-login {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url('../media/unicamp-fca.png');
-  background-size:contain;
-  filter: brightness(50%);
+  z-index: -99;
 }
 
-.login-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(255, 255, 255, 0.7);
-  width: 400px;
-  height: 400px;
-  border-radius: 20px;
+.bg-login img {
+  max-width: 100vw;
+}
+
+.form_container {
+  width: 50vh;
+  height: fit-content;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  backdrop-filter: blur(70%);
-  padding: 20px;
+  justify-content: center;
+  gap: 15px;
+  padding: 50px 40px 20px 40px;
+  background-color: #ffffff;
+  box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.01),
+    0px 59px 36px rgba(0, 0, 0, 0.05), 0px 26px 26px rgba(0, 0, 0, 0.09),
+    0px 7px 15px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 11px;
+  font-family: "Inter", sans-serif;
 }
 
-.logo {
-  width: 50%;
-  margin-bottom: 20px;
-}
-
-.ui.input {
+.logo_container {
+  box-sizing: border-box;
+  height: 50px;
   width: 100%;
-  padding: 10px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url('../media/logo.png');
+  border-radius: 11px;
 }
 
-.ui.primary.button{
-  width: 50%;
+.title_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
-.forgot-password {
-  margin-top: 15px;
+.title {
+  font-family: SFProBold;
+
+  margin: 0;
+  font-size: 4.5rem;
+  font-weight: 800;
+  color: #212121;
 }
 
-.forgot-password a {
-  color: #464646;
-  text-decoration: none;
+.subtitle {
+  font-size: 20px;
+  text-align: center;
+  line-height: 20px;
+  color: #8B8E98
 }
 
-.forgot-password a:hover {
+.input_container {
+  width: 100%;
+  height: fit-content;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.icon {
+  width: 20px;
+  position: absolute;
+  z-index: 99;
+  left: 12px;
+  bottom: 9px;
+}
+
+button {
+  max-width: 320px;
+  display: flex;
+  padding: 0.5rem 1.4rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  vertical-align: middle;
+  align-items: center;
+  border-radius: 0.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  gap: 0.75rem;
+  color: rgb(65, 63, 63);
+  background-color: #fff;
+  cursor: pointer;
+  transition: all .6s ease;
+}
+
+.button svg {
+  height: 24px;
+}
+
+button:hover {
+  transform: scale(1.02);
+}
+
+.sign-in_ggl {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  background: #ffffff;
+  border-radius: 7px;
+  outline: none;
+  color: #242424;
+  border: 1px solid #e5e5e5;
+  filter: drop-shadow(0px 1px 0px #efefef) drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
+  cursor: pointer;
+}
+
+.note {
+  font-size: 1rem;
+  color: #8B8E98;
   text-decoration: underline;
 }
 
- /* Google Font Link */
- @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
- *{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   font-family: "Poppins" , sans-serif;
- }
+/* Google Font Link */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
- .sidebar{
-   position: fixed;
-   left: 0;
-   top: 0;
-   height: 100%;
-   width: 78px;
-   background: #11101D;
-   padding: 6px 14px;
-   z-index: 99;
-   transition: all 0.5s ease;
- }
- .sidebar.open{
-   width: 250px;
- }
- .sidebar .logo-details{
-   height: 60px;
-   display: flex;
-   align-items: center;
-   position: relative;
- }
- .sidebar .logo-details .icon{
-   opacity: 0;
-   transition: all 0.5s ease;
- }
- .sidebar .logo-details .logo_name{
-   color: #fff;
-   font-size: 20px;
-   font-weight: 600;
-   opacity: 0;
-   transition: all 0.5s ease;
- }
- .sidebar.open .logo-details .icon,
- .sidebar.open .logo-details .logo_name{
-   opacity: 1;
- }
- .sidebar .logo-details #btn{
-   position: absolute;
-   top: 50%;
-   right: 0;
-   transform: translateY(-50%);
-   font-size: 22px;
-   transition: all 0.4s ease;
-   font-size: 23px;
-   text-align: center;
-   cursor: pointer;
-   transition: all 0.5s ease;
- }
- .sidebar.open .logo-details #btn{
-   text-align: right;
- }
- .sidebar i{
-   color: #fff;
-   height: 60px;
-   min-width: 50px;
-   font-size: 28px;
-   text-align: center;
-   line-height: 60px;
- }
- .sidebar .nav-list{
-   margin-top: 20px;
-   height: 100%;
- }
- .sidebar li{
-   position: relative;
-   margin: 8px 0;
-   list-style: none;
- }
- .sidebar li .tooltip{
-   position: absolute;
-   top: -20px;
-   left: calc(100% + 15px);
-   z-index: 3;
-   background: #fff;
-   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-   padding: 6px 12px;
-   border-radius: 4px;
-   font-size: 15px;
-   font-weight: 400;
-   opacity: 0;
-   white-space: nowrap;
-   pointer-events: none;
-   transition: 0s;
- }
- .sidebar li:hover .tooltip{
-   opacity: 1;
-   pointer-events: auto;
-   transition: all 0.4s ease;
-   top: 50%;
-   transform: translateY(-50%);
- }
- .sidebar.open li .tooltip{
-   display: none;
- }
- .sidebar input{
-   font-size: 15px;
-   color: #FFF;
-   font-weight: 400;
-   outline: none;
-   height: 50px;
-   width: 100%;
-   width: 50px;
-   border: none;
-   border-radius: 12px;
-   transition: all 0.5s ease;
-   background: #1d1b31;
- }
- .sidebar.open input{
-   padding: 0 20px 0 50px;
-   width: 100%;
- }
- .sidebar .bx-search{
-   position: absolute;
-   top: 50%;
-   left: 0;
-   transform: translateY(-50%);
-   font-size: 22px;
-   background: #1d1b31;
-   color: #FFF;
- }
- .sidebar.open .bx-search:hover{
-   background: #1d1b31;
-   color: #FFF;
- }
- .sidebar .bx-search:hover{
-   background: #FFF;
-   color: #11101d;
- }
- .sidebar li a{
-   display: flex;
-   height: 100%;
-   width: 100%;
-   border-radius: 12px;
-   align-items: center;
-   text-decoration: none;
-   transition: all 0.4s ease;
-   background: #11101D;
- }
- .sidebar li a:hover{
-   background: #FFF;
- }
- .sidebar li a .links_name{
-   color: #fff;
-   font-size: 15px;
-   font-weight: 400;
-   white-space: nowrap;
-   opacity: 0;
-   pointer-events: none;
-   transition: 0.4s;
- }
- .sidebar.open li a .links_name{
-   opacity: 1;
-   pointer-events: auto;
- }
- .sidebar li a:hover .links_name,
- .sidebar li a:hover i{
-   transition: all 0.5s ease;
-   color: #11101D;
- }
- .sidebar li i{
-   height: 50px;
-   line-height: 50px;
-   font-size: 18px;
-   border-radius: 12px;
- }
- .sidebar li.profile{
-   position: fixed;
-   height: 60px;
-   width: 78px;
-   left: 0;
-   bottom: -8px;
-   padding: 10px 14px;
-   background: #1d1b31;
-   transition: all 0.5s ease;
-   overflow: hidden;
- }
- .sidebar.open li.profile{
-   width: 250px;
- }
- .sidebar li .profile-details{
-   display: flex;
-   align-items: center;
-   flex-wrap: nowrap;
- }
- .sidebar li img{
-   height: 45px;
-   width: 45px;
-   object-fit: cover;
-   border-radius: 6px;
-   margin-right: 10px;
- }
- .sidebar li.profile .name,
- .sidebar li.profile .job{
-   font-size: 15px;
-   font-weight: 400;
-   color: #fff;
-   white-space: nowrap;
- }
- .sidebar li.profile .job{
-   font-size: 12px;
- }
- .sidebar .profile #log_out{
-   position: absolute;
-   top: 50%;
-   right: 0;
-   transform: translateY(-50%);
-   background: #1d1b31;
-   width: 100%;
-   height: 60px;
-   line-height: 60px;
-   border-radius: 0px;
-   transition: all 0.5s ease;
- }
- .sidebar.open .profile #log_out{
-   width: 50px;
-   background: none;
- }
- .home-section{
-   position: relative;
-   background: #E4E9F7;
-   min-height: 100vh;
-   top: 0;
-   left: 78px;
-   width: calc(100% - 78px);
-   transition: all 0.5s ease;
-   z-index: 2;
- }
- .sidebar.open ~ .home-section{
-   left: 250px;
-   width: calc(100% - 250px);
- }
- .home-section .text{
-   display: inline-block;
-   color: #11101d;
-   font-size: 25px;
-   font-weight: 500;
-   margin: 18px
- }
- @media (max-width: 420px) {
-   .sidebar li .tooltip{
-     display: none;
-   }
- }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: SFProRegular;
+}
 
- .card-container {
+.sidebar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 78px;
+  background: #11101D;
+  padding: 6px 14px;
+  z-index: 99;
+  transition: all 0.5s ease;
+}
+
+.sidebar.open {
+  width: 250px;
+}
+
+.sidebar .logo-details {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.sidebar .logo-details .icon {
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+
+.sidebar .logo-details .logo_name {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+
+.sidebar.open .logo-details .icon,
+.sidebar.open .logo-details .logo_name {
+  opacity: 1;
+}
+
+.sidebar .logo-details #btn {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  font-size: 22px;
+  transition: all 0.4s ease;
+  font-size: 23px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+.sidebar.open .logo-details #btn {
+  text-align: right;
+}
+
+.sidebar i {
+  color: #fff;
+  height: 60px;
+  min-width: 50px;
+  font-size: 28px;
+  text-align: center;
+  line-height: 60px;
+}
+
+.sidebar .nav-list {
+  margin-top: 20px;
+  height: 100%;
+}
+
+.sidebar li {
+  position: relative;
+  margin: 8px 0;
+  list-style: none;
+}
+
+.sidebar li .tooltip {
+  position: absolute;
+  top: -20px;
+  left: calc(100% + 15px);
+  z-index: 3;
+  background: #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  padding: 6px 12px;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 400;
+  opacity: 0;
+  white-space: nowrap;
+  pointer-events: none;
+  transition: 0s;
+}
+
+.sidebar li:hover .tooltip {
+  opacity: 1;
+  pointer-events: auto;
+  transition: all 0.4s ease;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.sidebar.open li .tooltip {
+  display: none;
+}
+
+.sidebar input {
+  font-size: 15px;
+  color: #FFF;
+  font-weight: 400;
+  outline: none;
+  height: 50px;
+  width: 100%;
+  width: 50px;
+  border: none;
+  border-radius: 12px;
+  transition: all 0.5s ease;
+  background: #1d1b31;
+}
+
+.sidebar.open input {
+  padding: 0 20px 0 50px;
+  width: 100%;
+}
+
+.sidebar .bx-search {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  font-size: 22px;
+  background: #1d1b31;
+  color: #FFF;
+}
+
+.sidebar.open .bx-search:hover {
+  background: #1d1b31;
+  color: #FFF;
+}
+
+.sidebar .bx-search:hover {
+  background: #FFF;
+  color: #11101d;
+}
+
+.sidebar li a {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  border-radius: 12px;
+  align-items: center;
+  text-decoration: none;
+  transition: all 0.4s ease;
+  background: #11101D;
+}
+
+.sidebar li a:hover {
+  background: #FFF;
+}
+
+.sidebar li a .links_name {
+  color: #fff;
+  font-size: 15px;
+  font-weight: 400;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.4s;
+}
+
+.sidebar.open li a .links_name {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.sidebar li a:hover .links_name,
+.sidebar li a:hover i {
+  transition: all 0.5s ease;
+  color: #11101D;
+}
+
+.sidebar li i {
+  height: 50px;
+  line-height: 50px;
+  font-size: 18px;
+  border-radius: 12px;
+}
+
+.sidebar li.profile {
+  position: fixed;
+  height: 60px;
+  width: 78px;
+  left: 0;
+  bottom: -8px;
+  padding: 10px 14px;
+  background: #1d1b31;
+  transition: all 0.5s ease;
+  overflow: hidden;
+}
+
+.sidebar.open li.profile {
+  width: 250px;
+}
+
+.sidebar li .profile-details {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.sidebar li img {
+  height: 45px;
+  width: 45px;
+  object-fit: cover;
+  border-radius: 6px;
+  margin-right: 10px;
+}
+
+.sidebar li.profile .name,
+.sidebar li.profile .job {
+  font-size: 15px;
+  font-weight: 400;
+  color: #fff;
+  white-space: nowrap;
+}
+
+.sidebar li.profile .job {
+  font-size: 12px;
+}
+
+.sidebar .profile #log_out {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  background: #1d1b31;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  border-radius: 0px;
+  transition: all 0.5s ease;
+}
+
+.sidebar.open .profile #log_out {
+  width: 50px;
+  background: none;
+}
+
+.home-section {
+  position: relative;
+  background: #E4E9F7;
+  min-height: 100vh;
+  top: 0;
+  left: 78px;
+  width: calc(100% - 78px);
+  transition: all 0.5s ease;
+  z-index: 2;
+}
+
+.sidebar.open~.home-section {
+  left: 250px;
+  width: calc(100% - 250px);
+}
+
+.home-section .text {
+  display: inline-block;
+  color: #11101d;
+  font-size: 25px;
+  font-weight: 500;
+  margin: 18px
+}
+
+@media (max-width: 420px) {
+  .sidebar li .tooltip {
+    display: none;
+  }
+}
+
+.card-container {
   display: flex;
   justify-content: center;
 }
 
-.header{
+.header {
   display: flex;
   justify-content: center;
 }
