--- a/web/src/assets/login.css
+++ b/web/src/assets/login.css
@@ -14,7 +14,7 @@ body {
 
 @font-face {
   font-family: SFProRegular;
-  src: url(../fonts/SFPRODISPLAYREGULAR.OTF);
+  src: url(./fonts/SFPRODISPLAYREGULAR.OTF);
 }
 
 .bg-login {
