--- a/web/src/assets/home.css
+++ b/web/src/assets/home.css
@@ -36,6 +36,7 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
 .sidebar .logo-details .icon {
   opacity: 0;
   transition: all 0.5s ease;
+  transform: translateX(-100%)
 }
 
 .sidebar .logo-details .logo_name {
@@ -44,11 +45,13 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   font-weight: 600;
   opacity: 0;
   transition: all 0.5s ease;
+  transform: translateX(-100%)
 }
 
 .sidebar.open .logo-details .icon,
 .sidebar.open .logo-details .logo_name {
   opacity: 1;
+  transform: translateX(0%)
 }
 
 .sidebar .logo-details #btn {
@@ -134,26 +137,6 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
 .sidebar.open input {
   padding: 0 20px 0 50px;
   width: 100%;
-}
-
-.sidebar .bx-search {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: #1d1b31;
-  color: #FFF;
-}
-
-.sidebar.open .bx-search:hover {
-  background: #1d1b31;
-  color: #FFF;
-}
-
-.sidebar .bx-search:hover {
-  background: #FFF;
-  color: #11101d;
 }
 
 .sidebar li a {
