--- a/web/src/assets/patrimonio.css
+++ b/web/src/assets/patrimonio.css
@@ -1,3 +1,24 @@
-.margemtop{
-    margin-top: 2%;
+.table-p {
+    padding: 20px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    z-index: -1;
+}
+
+th,
+td {
+    border: 1px solid #ddd;
+    text-align: left;
+    padding: 8px;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+input[type="checkbox"] {
+    margin-right: 5px;
 }
