--- a/web/src/assets/home.css
+++ b/web/src/assets/home.css
@@ -1,12 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: SFProRegular;
 }
-
 .sidebar {
   position: fixed;
   left: 0;
@@ -18,21 +16,18 @@
   z-index: 99;
   transition: all 0.5s ease;
 }
-
 .sidebar.open {
   width: 250px;
 }
 /* Para fazer a navbar ser responsiva,
 apenas alterar a width acima para 100% com
 a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
-
 .sidebar .logo-details {
   height: 60px;
   display: flex;
   align-items: center;
   position: relative;
 }
-
 .sidebar .logo-details .icon {
   opacity: 0;
   transition: all 0.5s ease;
@@ -66,11 +61,9 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   cursor: pointer;
   transition: all 0.5s ease;
 }
-
 .sidebar.open .logo-details #btn {
   text-align: right;
 }
-
 .sidebar i {
   color: #fff;
   height: 60px;
@@ -79,18 +72,15 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   text-align: center;
   line-height: 60px;
 }
-
 .sidebar .nav-list {
   margin-top: 20px;
   height: 100%;
 }
-
 .sidebar li {
   position: relative;
   margin: 8px 0;
   list-style: none;
 }
-
 .sidebar li .tooltip {
   position: absolute;
   top: -20px;
@@ -107,7 +97,6 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   pointer-events: none;
   transition: 0s;
 }
-
 .sidebar li:hover .tooltip {
   opacity: 1;
   pointer-events: auto;
@@ -115,11 +104,9 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   top: 50%;
   transform: translateY(-50%);
 }
-
 .sidebar.open li .tooltip {
   display: none;
 }
-
 .sidebar input {
   font-size: 15px;
   color: #FFF;
@@ -133,13 +120,12 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   transition: all 0.5s ease;
   background: #1d1b31;
 }
-
 .sidebar.open input {
   padding: 0 20px 0 50px;
   width: 100%;
 }
 
-.sidebar li router-link {
+.sidebar li a {
   display: flex;
   height: 100%;
   width: 100%;
@@ -149,12 +135,10 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   transition: all 0.4s ease;
   background: #11101D;
 }
-
-.sidebar li router-link:hover {
+.sidebar li a:hover {
   background: #FFF;
 }
-
-.sidebar li router-link .links_name {
+.sidebar li a .links_name {
   color: #fff;
   font-size: 15px;
   font-weight: 400;
@@ -162,28 +146,22 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   opacity: 0;
   pointer-events: none;
   transition: 0.4s;
-  transform: translateX(-100%);
 }
-
-.sidebar.open li router-link .links_name {
+.sidebar.open li a .links_name {
   opacity: 1;
   pointer-events: auto;
-  transform: translateX(0%);
 }
-
-.sidebar li router-link:hover .links_name,
-.sidebar li router-link:hover i {
+.sidebar li a:hover .links_name,
+.sidebar li a:hover i {
   transition: all 0.5s ease;
   color: #11101D;
 }
-
 .sidebar li i {
   height: 50px;
   line-height: 50px;
   font-size: 18px;
   border-radius: 12px;
 }
-
 .sidebar li.profile {
   position: fixed;
   height: 60px;
@@ -195,17 +173,14 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   transition: all 0.5s ease;
   overflow: hidden;
 }
-
 .sidebar.open li.profile {
   width: 250px;
 }
-
 .sidebar li .profile-details {
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
 }
-
 .sidebar li img {
   height: 45px;
   width: 45px;
@@ -213,7 +188,6 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   border-radius: 6px;
   margin-right: 10px;
 }
-
 .sidebar li.profile .name,
 .sidebar li.profile .job {
   font-size: 15px;
@@ -221,11 +195,9 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   color: #fff;
   white-space: nowrap;
 }
-
 .sidebar li.profile .job {
   font-size: 12px;
 }
-
 .sidebar .profile #log_out {
   position: absolute;
   top: 50%;
@@ -238,12 +210,10 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   border-radius: 0px;
   transition: all 0.5s ease;
 }
-
 .sidebar.open .profile #log_out {
   width: 50px;
   background: none;
 }
-
 .home-section {
   position: relative;
   top: 0;
@@ -252,12 +222,10 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   transition: all 0.5s ease;
   z-index: 2;
 }
-
 .sidebar.open~.home-section {
   left: 250px;
   width: calc(100% - 250px);
 }
-
 .home-section .text {
   display: inline-block;
   color: #11101d;
@@ -265,18 +233,15 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   font-weight: 500;
   margin: 18px
 }
-
 @media (max-width: 420px) {
   .sidebar li .tooltip {
     display: none;
   }
 }
-
 .card-container {
   display: flex;
   justify-content: center;
 }
-
 .header {
   display: flex;
   justify-content: center;
