--- a/web/src/assets/login.css
+++ b/web/src/assets/login.css
@@ -9,7 +9,7 @@ body {
 
 @font-face {
   font-family: SFProBold;
-  src: url(../fonts/SFPRODISPLAYBOLD.OTF)
+  src: url(../fonts/SFPRODISPLAYBOLD.OTF);
 }
 
 @font-face {
@@ -36,11 +36,11 @@ body {
   gap: 15px;
   padding: 50px 40px 20px 40px;
   background-color: #ffffff;
-  box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.01),
-    0px 59px 36px rgba(0, 0, 0, 0.05), 0px 26px 26px rgba(0, 0, 0, 0.09),
-    0px 7px 15px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.01), 0px 59px 36px rgba(0, 0, 0, 0.05),
+    0px 26px 26px rgba(0, 0, 0, 0.09), 0px 7px 15px rgba(0, 0, 0, 0.1),
+    0px 0px 0px rgba(0, 0, 0, 0.1);
   border-radius: 11px;
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 .logo_container {
@@ -71,7 +71,7 @@ body {
   font-size: 20px;
   text-align: center;
   line-height: 20px;
-  color: #8B8E98
+  color: #8b8e98;
 }
 
 .input_container {
@@ -108,7 +108,7 @@ button {
   color: rgb(65, 63, 63);
   background-color: #fff;
   cursor: pointer;
-  transition: all .6s ease;
+  transition: all 0.6s ease;
 }
 
 .button svg {
@@ -137,6 +137,6 @@ button:hover {
 
 .note {
   font-size: 1rem;
-  color: #8B8E98;
+  color: #8b8e98;
   text-decoration: underline;
-} 
+}
