--- a/web/src/assets/patrimonio.css
+++ b/web/src/assets/patrimonio.css
@@ -1,98 +1,97 @@
 .table-p {
-    padding: 20px;
+  padding: 20px;
 }
 
 table {
-    border-collapse: collapse;
-    width: 100%;
-    z-index: -1;
+  border-collapse: collapse;
+  width: 100%;
+  z-index: -1;
 }
 
 th,
 td {
-    border: 1px solid #ddd;
-    text-align: left;
-    padding: 8px;
+  border: 1px solid #ddd;
+  text-align: left;
+  padding: 8px;
 }
 
 th {
-    background-color: #f2f2f2;
+  background-color: #f2f2f2;
 }
 
-input[type="checkbox"] {
-    margin-right: 5px;
+input[type='checkbox'] {
+  margin-right: 5px;
 }
 
 .open {
-    display: block !important;
-  }
+  display: block !important;
+}
 
-  select.placeholder {
-    color: rgba(0, 0, 0, 0.3);
-  }
+select.placeholder {
+  color: rgba(0, 0, 0, 0.3);
+}
 
+.ui.container.add-form {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  z-index: 999;
+  padding: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+}
 
-  .ui.container.add-form {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    z-index: 999;
-    padding: 30px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    border-radius: 5px;
-  }
+.ui.container.add-form h2.ui {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
 
-  .ui.container.add-form h2.ui {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
+.ui.container.add-form input[type='text'],
+.ui.container.add-form select {
+  width: 100%;
+  margin-bottom: 20px;
+}
 
-  .ui.container.add-form input[type="text"],
-  .ui.container.add-form select {
-    width: 100%;
-    margin-bottom: 20px;
-  }
+.ui.container.add-form .ui.submit.button {
+  margin-top: 20px;
+}
 
-  .ui.container.add-form .ui.submit.button {
-    margin-top: 20px;
-  }
+.dimmer {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 999;
+}
 
-  .dimmer {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
-    z-index: 999;
-  }
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  z-index: 1000;
+}
 
-  .popup {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 30px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    border-radius: 5px;
-    z-index: 1000;
-  }
+.popup h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
 
-  .popup h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
+.popup form input[type='text'],
+.popup form select {
+  width: 100%;
+  margin-bottom: 20px;
+}
 
-  .popup form input[type="text"],
-  .popup form select {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-
-  .popup form button[type="submit"] {
-    margin-top: 20px;
-  }
+.popup form button[type='submit'] {
+  margin-top: 20px;
+}
