Login pelo google

--- a/web/src/assets/login.css
+++ b/web/src/assets/login.css
@@ -7,6 +7,10 @@ body {
   height: 100vh;
 }
 
+* {
+  font-family: SFProBold, sans-serif;
+}
+
 @font-face {
   font-family: SFProBold;
   src: url(../fonts/SFPRODISPLAYBOLD.OTF);
@@ -28,7 +32,7 @@ body {
 
 .form_container {
   width: 50vh;
-  height: 50vh;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -139,4 +143,5 @@ button:hover {
   font-size: 1rem;
   color: #8b8e98;
   text-decoration: underline;
+  padding-bottom: 10px;
 }
