--- a/web/src/assets/login.css
+++ b/web/src/assets/login.css
@@ -24,7 +24,15 @@ body {
 .bg-login {
   position: fixed;
   z-index: -99;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url("../assets/media/bg-login.png");
+  background-size: cover;
+  background-position: center;
 }
+
 
 .bg-login img {
   max-width: 100vw;
@@ -38,20 +46,25 @@ body {
   align-items: center;
   justify-content: center;
   gap: 15px;
-  padding: 50px 40px 20px 40px;
+  padding: 30px 40px 30px 40px;
   background-color: #ffffff;
   box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.01), 0px 59px 36px rgba(0, 0, 0, 0.05),
     0px 26px 26px rgba(0, 0, 0, 0.09), 0px 7px 15px rgba(0, 0, 0, 0.1),
     0px 0px 0px rgba(0, 0, 0, 0.1);
   border-radius: 11px;
-  font-family: 'Inter', sans-serif;
 }
 
 .logo_container {
+  padding-top: 20px;
   display: flex;
   width: 100%;
   justify-content: center;
   align-items: center;
+}
+
+.logo_container img {
+  width: 150px;
+  height: 100%;
 }
 
 .title_container {
@@ -139,4 +152,75 @@ body {
 .login-failed-description {
   margin: 0;
   text-align: center;
+}
+
+.note:hover {
+  cursor: pointer;
+  color: black;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  z-index: 999;
+}
+
+.popup.visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  text-align: right;
+  max-width: 40vw;
+}
+
+.popup-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.popup-header h2 {
+  margin: 0;
+  font-family: SFProBold, sans-serif;
+}
+
+.popup-description {
+  margin-bottom: 20px;
+  font-size: 16px;
+  text-align: justify;
+}
+
+.ok-button {
+  border: none;
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* crie uma media query para celulares
+  com largura menor que 768px */
+@media (max-width: 768px) {
+  .popup-content {
+    max-width: 100vw;
+  }
 }
