--- a/web/src/assets/pages.css
+++ b/web/src/assets/pages.css
@@ -11,6 +11,22 @@
   width: 100%;
   text-align: center;
 }
+/* 
+.logout-button {
+  padding: 10px;
+  text-align: center;
+  background: #1d1b31;
+}
+
+.logout-button router-link {
+  display: block;
+  color: #fff;
+}
+
+.logout-button i {
+  font-size: 18px;
+} */
+
 .sidebar {
   position: fixed;
   left: 0;
@@ -21,6 +37,9 @@
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .sidebar.open {
   width: 250px;
