--- a/web/src/assets/pages.css
+++ b/web/src/assets/pages.css
@@ -11,43 +11,26 @@
   width: 100%;
   text-align: center;
 }
-/* 
-.logout-button {
-  padding: 10px;
-  text-align: center;
-  background: #1d1b31;
-}
-
-.logout-button router-link {
-  display: block;
-  color: #fff;
-}
-
-.logout-button i {
-  font-size: 18px;
-} */
-
-.logout-list {
-  position: relative;
-  padding-top: 15em; /* Ajuste a distância conforme necessário */
-  width: 100%;
-}
-
 
 .sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: fixed;
   left: 0;
   top: 0;
-  height: 100%;
+  bottom: 0; /* Adicione essa propriedade para ocupar toda a altura da página */
   width: 78px;
   background: #11101d;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
+
+.logout-list {
+  margin-top: calc(100vh - 500px);
+}
+
 .sidebar.open {
   width: 250px;
 }
@@ -106,7 +89,7 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
 }
 .sidebar .nav-list {
   margin-top: 20px;
-  height: 100%;
+  flex-grow: 1;
 }
 .sidebar li {
   position: relative;
@@ -194,58 +177,7 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   font-size: 18px;
   border-radius: 12px;
 }
-.sidebar li.profile {
-  position: fixed;
-  height: 60px;
-  width: 78px;
-  left: 0;
-  bottom: -8px;
-  padding: 10px 14px;
-  background: #1d1b31;
-  transition: all 0.5s ease;
-  overflow: hidden;
-}
-.sidebar.open li.profile {
-  width: 250px;
-}
-.sidebar li .profile-details {
-  display: flex;
-  align-items: center;
-  flex-wrap: nowrap;
-}
-.sidebar li img {
-  height: 45px;
-  width: 45px;
-  object-fit: cover;
-  border-radius: 6px;
-  margin-right: 10px;
-}
-.sidebar li.profile .name,
-.sidebar li.profile .job {
-  font-size: 15px;
-  font-weight: 400;
-  color: #fff;
-  white-space: nowrap;
-}
-.sidebar li.profile .job {
-  font-size: 12px;
-}
-.sidebar .profile #log_out {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  transform: translateY(-50%);
-  background: #1d1b31;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  border-radius: 0px;
-  transition: all 0.5s ease;
-}
-.sidebar.open .profile #log_out {
-  width: 50px;
-  background: none;
-}
+
 .home-section {
   position: relative;
   top: 0;
@@ -258,6 +190,22 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   left: 250px;
   width: calc(100% - 250px);
 }
+
+.home-section {
+  padding-bottom: 50px;
+}
+
+.rodape {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  z-index: -9999; /* Valor do z-index para garantir sobreposição */
+}
+
+.rodape-segment {
+  background: #1e1c31 !important;
+}
+
 .home-section .text {
   display: inline-block;
   color: #11101d;
