--- a/web/src/assets/pages.css
+++ b/web/src/assets/pages.css
@@ -50,16 +50,20 @@
   height: 100vh;
   background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(70, 101, 107) 100%);
   opacity: 1;
-  animation: gradient 2s linear forwards;
+  animation: gradient 4s ease-in-out infinite;
 }
 
 @keyframes gradient {
-  from {
-    opacity: 1;
+  0% {
+    opacity: 0;
   }
 
-  to {
-    opacity: 0.4;
+  50% {
+    opacity: 0.6;
+  }
+
+  100% {
+    opacity: 0;
   }
 }
 
@@ -170,25 +174,6 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   display: none;
 }
 
-.sidebar input {
-  font-size: 15px;
-  color: #fff;
-  font-weight: 400;
-  outline: none;
-  height: 50px;
-  width: 100%;
-  width: 50px;
-  border: none;
-  border-radius: 12px;
-  transition: all 0.5s ease;
-  background: #1d1b31;
-}
-
-.sidebar.open input {
-  padding: 0 20px 0 50px;
-  width: 100%;
-}
-
 .sidebar li a {
   display: flex;
   height: 100%;
@@ -235,36 +220,31 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
 .home-section {
   position: relative;
   top: 0;
-  left: 78px;
-  width: calc(100% - 78px);
+  left: 0px;
+  width: calc(100vw - 78px);
   transition: all 0.5s ease;
-  z-index: 2;
-}
-
-.sidebar.open~.home-section {
-  left: 250px;
-  width: calc(100% - 250px);
-}
-
-.home-section {
   padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.page-container {
-  display: flex !important;
-  justify-content: center !important;
-  align-items: center !important;
-  height: 60vh !important;
+.sidebar.open~.bg-dimmer {
+  backdrop-filter: blur(10px);
+  opacity: 0.8;
+  transition: all 0.5s ease;
+  background-color: black;
 }
 
-.titulo1 {
-  font-size: 65px !important;
-  color: white !important;
-}
-
-.titulo2 {
-  font-size: 30px !important;
-  color: white !important;
+.bg-dimmer {
+  transition: all 0.5s ease;
+  position: fixed;
+  z-index: 95;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  opacity: 1;
 }
 
 .rodape {
@@ -274,7 +254,6 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   bottom: 0;
   width: 100%;
   z-index: -9999;
-  /* Valor do z-index para garantir sobreposição */
 }
 
 .rodape-segment {
@@ -406,16 +385,6 @@ select.placeholder {
   margin-top: 20px;
 }
 
-.button1 {
-  font-size: 1.42857143rem !important;
-  margin-right: 5px !important;
-}
-
-.button2 {
-  font-size: 1.42857143rem !important;
-  margin-left: 5px !important;
-}
-
 .dimmer {
   display: none;
   position: fixed;
@@ -454,10 +423,6 @@ select.placeholder {
   margin-top: 20px;
 }
 
-.ui.container {
-  margin-top: 20px;
-}
-
 .ui.header {
   margin-bottom: 20px;
 }
@@ -473,4 +438,69 @@ select.placeholder {
 .ui.celled.table td,
 .ui.celled.table th {
   text-align: center;
+}
+
+.home_title {
+  font-size: 50px;
+  line-height: 1.2;
+  font-weight: 700;
+  color: #11101d;
+}
+
+.home_title .hello {
+  font-family: SFProBold;
+}
+
+.home_title .welcome {
+  padding-top: 5px;
+  font-size: 0.5em;
+}
+
+.home_title .linkful {
+  margin-top: 20px;
+  font-size: 0.35em;
+}
+
+.home_title .linkful ul {
+  margin-top: 5px;
+  margin-left: 10%;
+  list-style: none;
+  line-height: 1.5;
+  font-size: 0.9em;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.card_info {
+  width: 300px;
+  margin-top: 15px;
+  margin-left: 10px;
+  border-radius: 10px;
+  border: 2px solid #11101d;
+  background-color: #30344c;
+  padding: 10px;
+}
+
+.card_content {
+  padding: 10px;
+  width: 100%;
+  color: white;
+}
+
+.card_title {
+  padding: 5px;
+  font-size: 20px;
+  font-family: SFProBold;
+  color: #c0c3d7;
+}
+
+.home-sec {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
 }
