--- a/web/src/assets/pages.css
+++ b/web/src/assets/pages.css
@@ -222,7 +222,7 @@ a sintaxe @media. Att Davie e Samuka em 05/04/2023 */
   top: 0;
   left: 78px;
   right: 0;
-  width: 100vw;
+  width: calc(100vw - 78px);
   transition: all 0.5s ease;
   padding-bottom: 50px;
   display: flex;
