--- a/web/src/assets/login.css
+++ b/web/src/assets/login.css
@@ -1,10 +1,11 @@
-body {
+.login-body {
   margin: 0;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100vw;
 }
 
 * {
