--- a/web/src/assets/login.css
+++ b/web/src/assets/login.css
@@ -6,7 +6,7 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
-  background: linear-gradient(-45deg, #0e1124, #2a3050, #00c5cc, #006999);
+  background: linear-gradient(-45deg, #0e1124, #2a3050, #009ca1, #006999);
   background-size: 400% 400%;
   animation: gradient 8s ease-in-out infinite;
 }
@@ -47,7 +47,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 15px;
+  gap: 20px;
   padding: 30px 40px 30px 40px;
   background-color: #ffffff;
   box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.01), 0px 59px 36px rgba(0, 0, 0, 0.05),
@@ -80,13 +80,13 @@
 .title {
   font-family: SFProBold;
   margin: 0;
-  font-size: 5rem;
+  font-size: 5em;
   font-weight: 800;
   color: #212121;
 }
 
 .subtitle {
-  font-size: 18px;
+  font-size: 1.5em;
   text-align: center;
   line-height: 20px;
   color: #8b8e98;
@@ -102,7 +102,7 @@
 }
 
 .note {
-  font-size: 1rem;
+  font-size: 1.1em;
   color: #8b8e98;
   text-decoration: underline;
   padding-bottom: 10px;
